# Lisy

./: README.md  hand_tracking.py  main.py  prediction.py  pyproject.toml  speech_analyzer.py
dataset/: feature_extraction.py  lisy_dataset.npz
model/: LISYNet.pth  lisyNet.py  train.py
