[project]
name = "lisy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "mediapipe==0.10.14",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pyaudio>=0.2.14",
    "scikit-learn>=1.9.0",
    "speechrecognition>=3.17.0",
    "torch>=2.12.1",
]
